# MNIST_NUMC

./: .gitignore  CMakeLists.txt  main.cpp  test.ipynb
include/: neuralNet.hpp
modules/MNIST/include/MNIST/: readMNIST.hpp  showMNIST.hpp
modules/MNIST/src/: readMNIST.cpp  showMNIST.cpp
modules/layers/include/layers/: affineLayer.hpp  dropoutLayer.hpp  layer.hpp  reluLayer.hpp
modules/layers/src/: affineLayer.cpp  dropoutLayer.cpp  layer.cpp  reluLayer.cpp
modules/lossFunctions/include/lossFunctions/: softmax.hpp
modules/lossFunctions/src/: softmax.cpp
modules/numC/Include/numC/: main.cpp  npArrayCpu.hpp  npFunctions.hpp  npRandom.hpp
modules/numC/Includes/numC/: customKernels.hpp  npArrayCpu.hpp  npFunctions.hpp
modules/optimizers/include/optimizers/: adam.hpp
modules/optimizers/src/: adam.cpp
src/: NeuralNet.cpp
